--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 hasil_transkripsi.txt
+formatted_output.txt
+validation_output.txt
 PyAudio-0.2.14-cp39-cp39-win_amd64.whl
-.gitignore
+gitignore
 .env
 __pycache__
 intvw-project
