--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-sentence-transformers
+Flask==3.1.0
+groq==0.20.0
+langchain_core==0.3.47
+langchain_groq==0.3.1
+numpy==2.2.4
+opencv_python==4.11.0.86
+Pillow==11.1.0
+PyAudio==0.2.14
+pytesseract==0.3.13
+python-dotenv==1.0.1
+selenium==4.30.0
+sentence_transformers==3.4.1
